--- a/public/cms/less/common/common.less
+++ b/public/cms/less/common/common.less
@@ -31,9 +31,9 @@
   }
 }
 #sideBar{
-  width: 180px;
+  width: 190px;
   height: 600px;
-  padding:10px 20px;
+  padding:10px 10px;
   background-color: #222222;
   position:absolute;
   top:56px;
@@ -54,8 +54,9 @@
     }
   }
   >li.active{
-    color:#ceb887;
+    color:#fff;
     font-weight:500;
+    background-color: #18181c;
   }
   .areaGraph_icon,.cog_icon,.tables_icon,.email_icon,.pencil_icon,.location_icon,.monitor_icon{
     display:inline-block;
@@ -104,71 +105,6 @@
   top: 31px;
   left: 0;
 }
-
-/*弹出框 强改样式*/
-.el-dialog{
-  padding:15px 25px 0 25px;
-  margin:0;
-}
-.el-dialog__header{
-  font-weight: 300!important;
-  height:40px!important;
-  line-height:40px!important;
-  padding:0!important;
-}
-.el-dialog__body {
-  padding:0!important;
-}
-.el-dialog__footer{
-  height: 40px!important;
-  line-height: 40px!important;
-  text-align: center!important;
-  padding:0!important;
-}
-.el-dialog__footer button{
-  width: 85px!important;
-  height: 28px!important;
-  font-size:12px!important;
-  border-radius: 4px!important;
-  padding:0!important;
-}
-.el-dialog__footer button:nth-of-type(1){
-  color:#25ba80!important;
-  border: solid 1px #25ba80!important;
-}
-.el-dialog__footer button:nth-of-type(2){
-  color:#fff!important;
-  border: none!important;
-  margin:0 0 0 5px!important;
-  background:#25ba80!important;
-}
-/*树 强改样式*/
-.el-tree{
-  border:none!important;
-}
-.el-tree-node__content:hover{
-  background:#e9f6ff!important;
-}
-.el-tree--highlight-current .el-tree-node.is-current>.el-tree-node__content{
-  background:#E9F6FF!important;
-}
-//分页强改样式
-.el-pager li:hover,.el-pagination button:hover{
-  color:#25ba80;
-}
-.el-pagination button.disabled{
-  color: #e4e4e4;
-}
-.el-pager li.active{
-  cursor:default;
-  color:#fff;
-  border-color: #25ba80;
-  background:#25ba80;
-}
-
-
-
-
 /**
   product menu
  */
@@ -292,5 +228,91 @@
     }
   }
 }
-
+//弹出框 强改样式
+.el-dialog{
+  padding:15px 25px 0 25px;
+  margin:0;
+}
+.el-dialog__header{
+  font-weight: 300!important;
+  height:40px!important;
+  line-height:40px!important;
+  padding:0!important;
+}
+.el-dialog__body {
+  padding:0!important;
+}
+.el-dialog__footer{
+  height: 40px!important;
+  line-height: 40px!important;
+  text-align: center!important;
+  padding:0!important;
+}
+.el-dialog__footer button{
+  width: 85px!important;
+  height: 28px!important;
+  font-size:12px!important;
+  border-radius: 4px!important;
+  padding:0!important;
+}
+.el-dialog__footer button:nth-of-type(1){
+  color:#25ba80!important;
+  border: solid 1px #25ba80!important;
+}
+.el-dialog__footer button:nth-of-type(2){
+  color:#fff!important;
+  border: none!important;
+  margin:0 0 0 5px!important;
+  background:#25ba80!important;
+}
+//树 强改样式
+.el-tree{
+  border:none!important;
+}
+.el-tree-node__content:hover{
+  background:#e9f6ff!important;
+}
+.el-tree--highlight-current .el-tree-node.is-current>.el-tree-node__content{
+  background:#E9F6FF!important;
+}
+//分页强改样式
+.el-pager li:hover,.el-pagination button:hover{
+  color:#25ba80;
+}
+.el-pagination button.disabled{
+  color: #e4e4e4;
+}
+.el-pager li.active{
+  cursor:default;
+  color:#fff;
+  border-color: #25ba80;
+  background:#25ba80;
+}
+//按钮 强改样式
+.el-button{
+  color:#25ba80;
+  padding:0;
+  &:focus{
+    color:#25ba80;
+    border: 1px solid #25ba80;
+  }
+}
+.el-button--default{
+  color:#25ba80;
+  border: 1px solid #25ba80;
+  &:hover{
+    color:#25ba80;
+    border: 1px solid #25ba80;
+  }
+}
+.el-button--primary{
+  color:#fff;
+  border: 1px solid #25ba80;
+  background:#25ba80;
+  &:hover,&focus{
+    color:#fff;
+    border: 1px solid #25ba80;
+    background: #25ba80;
+  }
+}
 
