--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -226,3 +226,15 @@
   border-color: #25ba80;
   background: #25ba80;
 }
+.el-button {
+  color: #25ba80!important;
+  padding: 0!important;
+}
+.el-button--default {
+  color: #25ba80!important;
+  border: 1px solid #25ba80!important;
+}
+.el-button--primary {
+  background: #25ba80!important;
+  border: 1px solid #25ba80!important;
+}
