--- a/public/frontend/css/pages/register.css
+++ b/public/frontend/css/pages/register.css
@@ -331,24 +331,90 @@ table {
   background: #25ba80!important;
   border: 1px solid #25ba80!important;
 }
-#contact_main > h1 {
-  font-size: 40px;
-  text-align: center;
-  margin: 0 0 10px 0;
+#register_main {
+  min-width: 1366px;
+  height: 700px;
+  background: url("../../image/Koala.jpg");
+  position: relative;
 }
-#contact_main > p {
-  text-align: center;
-  margin: 0 0 10px 0;
+#register_main .register_box {
+  position: absolute;
+  width: 570px;
+  height: 575px;
+  background-color: #ffffff;
+  right: 121px;
+  top: 74px;
 }
-#contact_main .contantUs {
-  width: 80%;
-  height: 400px;
-  margin: 10px auto;
-  background: #f2f2f2;
+#register_main .register_box form {
+  margin-left: 64px;
+  width: 447px;
 }
-#contact_main .contantUs .emailUs,
-#contact_main .contantUs .callUs {
+#register_main .register_box form .register-header {
+  height: 40px;
+  line-height: 40px;
+  margin-top: 74px;
+  margin-bottom: 51px;
+}
+#register_main .register_box form .register-header .title {
+  font-size: 48px;
+}
+#register_main .register_box form ul {
+  width: 447px;
+  margin: 0 auto;
+  list-style: none;
+}
+#register_main .register_box form ul li {
+  box-sizing: border-box;
+  height: 49px;
+  border: 1px solid #5a5a5a;
+  margin-bottom: 29px;
+}
+#register_main .register_box form ul li .user-icon {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin: 12px;
+}
+#register_main .register_box form ul li .password-icon {
+  width: 20px;
+  height: 24px;
+  vertical-align: middle;
+  margin: 14px;
+}
+#register_main .register_box form ul li .again-icon {
+  width: 23px;
+  height: 24px;
+  vertical-align: middle;
+  margin: 12px;
+}
+#register_main .register_box form ul li .vline {
+  vertical-align: middle;
   display: inline-block;
-  width: 49%;
-  text-align: center;
+  width: 1px;
+  background-color: #5a5a5a;
+  height: 39px;
+  margin: 5px 0 5px 0;
+}
+#register_main .register_box form ul li input {
+  vertical-align: top;
+  box-sizing: border-box;
+  width: 380px;
+  height: 47px;
+  border: 0px solid transparent;
+  border-radius: 3px;
+  font-size: 18px;
+  line-height: 47px;
+  padding-left: 25px;
+}
+#register_main .register_box form ul li input:focus {
+  outline: none;
+}
+#register_main .register_box form .register-footer .registerBtn {
+  width: 100%;
+  border-radius: 3px;
+  background-color: #25ba80;
+  height: 50px;
+  color: #ffffff;
+  font-size: 20px;
+  border: 1px solid transparent;
 }
