--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -232,3 +232,16 @@
   border-color: #25ba80;
   background:#25ba80;
 }
+//按钮 强改样式
+.el-button{
+  color:#25ba80!important;
+  padding:0!important;
+}
+.el-button--default{
+  color:#25ba80!important;
+  border: 1px solid #25ba80!important;
+}
+.el-button--primary{
+  background:#25ba80!important;
+  border: 1px solid #25ba80!important;
+}
