前端网站 产品

--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -320,16 +320,31 @@ table {
   background: #25ba80;
 }
 .el-button {
-  color: #25ba80!important;
-  padding: 0!important;
+  color: #25ba80;
+  padding: 0;
+}
+.el-button:focus {
+  color: #25ba80;
+  border: 1px solid #25ba80;
 }
 .el-button--default {
-  color: #25ba80!important;
-  border: 1px solid #25ba80!important;
+  color: #25ba80;
+  border: 1px solid #25ba80;
+}
+.el-button--default:hover {
+  color: #25ba80;
+  border: 1px solid #25ba80;
 }
 .el-button--primary {
-  background: #25ba80!important;
-  border: 1px solid #25ba80!important;
+  color: #fff;
+  border: 1px solid #25ba80;
+  background: #25ba80;
+}
+.el-button--primary:hover,
+.el-button--primaryfocus {
+  color: #fff;
+  border: 1px solid #25ba80;
+  background: #25ba80;
 }
 #home_main .carouselArea {
   min-width: 1366px;
