--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -234,14 +234,28 @@
 }
 //按钮 强改样式
 .el-button{
-  color:#25ba80!important;
-  padding:0!important;
+  color:#25ba80;
+  padding:0;
+  &:focus{
+    color:#25ba80;
+    border: 1px solid #25ba80;
+  }
 }
 .el-button--default{
-  color:#25ba80!important;
-  border: 1px solid #25ba80!important;
+  color:#25ba80;
+  border: 1px solid #25ba80;
+  &:hover{
+    color:#25ba80;
+    border: 1px solid #25ba80;
+  }
 }
 .el-button--primary{
-  background:#25ba80!important;
-  border: 1px solid #25ba80!important;
+  color:#fff;
+  border: 1px solid #25ba80;
+  background:#25ba80;
+  &:hover,&focus{
+    color:#fff;
+    border: 1px solid #25ba80;
+    background: #25ba80;
+  }
 }
