--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -57,32 +57,34 @@
         }
       }
     }
-    .oneProduct{
-      display:inline-block;
-      width:271px;
-      height:331px;
-      margin:0 12px 10px 0;
-      &:hover{
-        -webkit-transform: translateY(-4px);
-        transform: translateY(-4px);
-        -webkit-animation-fill-mode: forwards;
-        animation-fill-mode: forwards;
-        box-shadow: 0 4px 30px rgba(0,0,0,.15)
-      }
-      .oneProduct_img{
+    .theProduct{
+      .oneProduct{
+        display:inline-block;
         width:271px;
-        height:271px;
-        >img{
+        height:331px;
+        margin:0 12px 10px 0;
+        &:hover{
+          -webkit-transform: translateY(-4px);
+          transform: translateY(-4px);
+          -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+          box-shadow: 0 4px 30px rgba(0,0,0,.15)
+        }
+        .oneProduct_img{
           width:271px;
           height:271px;
+          >img{
+            width:271px;
+            height:271px;
+          }
         }
-      }
-      .oneProduct_desc{
-        box-sizing:border-box;
-        width:271px;
-        height:60px;
-        padding:10px;
-        background-color: #E8E8E8;
+        .oneProduct_desc{
+          box-sizing:border-box;
+          width:271px;
+          height:60px;
+          padding:10px;
+          background-color: #E8E8E8;
+        }
       }
     }
   }
