--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -20,11 +20,18 @@
         display: inline-block;
         li {
           display: inline-block;
+          cursor:pointer;
           margin: 0 10px 0 0;
+          &:hover{
+            border:1px solid #ccc;
+          }
           img {
             width: 80px;
             height: 80px;
           }
+        }
+        li.active{
+          border:1px solid #ccc;
         }
       }
     }
@@ -56,6 +63,9 @@
           border:1px solid #ccc;
           border-radius:2px;
           margin: 0 20px 0 0;
+        }
+        >li.active{
+          background:blue;
         }
       }
       >button{
@@ -97,7 +107,7 @@
       }
     }
     .imageText {
-      height: 200px;
+
     }
     .comment {
       padding:0 0 70px 0;
