--- a/public/cms/less/pages/product_detail.less
+++ b/public/cms/less/pages/product_detail.less
@@ -38,7 +38,6 @@
           border-top: solid 1px #cccccc;
           border-bottom: solid 1px #cccccc;
           border-right: solid 1px #cccccc;
-
         }
       }
       li.active{
@@ -164,18 +163,15 @@
               width:59px;
             }
             &:nth-of-type(2){
-              width:170px;
+              width:100px;
             }
             &:nth-of-type(3){
-              width:85px;
-            }
-            &:nth-of-type(4){
               width:169px;
             }
-            &:nth-of-type(5){
-              width:99px;
+            &:nth-of-type(4){
+              width:350px;
             }
-            &:nth-of-type(6){
+            &:nth-of-type(5){
               width:190px;
             }
           }
@@ -199,11 +195,9 @@
             white-space: nowrap;
             text-overflow: ellipsis;
           }
-          >span:nth-of-type(6){
-            img{
-              width:40px;
-              height:24px;
-            }
+          button{
+            height: 25px;
+            padding:0 5px;
           }
         }
       }
