--- a/public/frontend/css/pages/register.css
+++ b/public/frontend/css/pages/register.css
@@ -346,6 +346,12 @@ table {
   border: 1px solid #25ba80;
   background: #25ba80;
 }
+.el-loading-spinner .path {
+  stroke: #25ba80;
+}
+.el-loading-spinner .el-loading-text {
+  color: #25ba80;
+}
 #register_main {
   min-width: 1366px;
   height: 700px;
