--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -259,3 +259,10 @@
     background: #25ba80;
   }
 }
+//loading强改样式
+.el-loading-spinner .path{
+  stroke: #25ba80;
+}
+.el-loading-spinner .el-loading-text{
+  color:#25ba80;
+}
