--- a/public/cms/css/pages/blogMana.css
+++ b/public/cms/css/pages/blogMana.css
@@ -404,6 +404,12 @@ table {
   border: 1px solid #25ba80;
   background: #25ba80;
 }
+.el-loading-spinner .path {
+  stroke: #25ba80;
+}
+.el-loading-spinner .el-loading-text {
+  color: #25ba80;
+}
 #blogMana_main {
   min-width: 1146px;
   height: 600px;
