--- a/public/cms/less/pages/productMana.less
+++ b/public/cms/less/pages/productMana.less
@@ -1,5 +1,6 @@
 @import "../common/reset";
 @import "../common/common";
+//@import "../../../common/common";
 
 #productMana_main{
   min-width:1146px;
@@ -61,7 +62,7 @@
             text-indent:10px;
             vertical-align: top;
             &:nth-of-type(1){
-              width:59px;
+              width:50px;
             }
             &:nth-of-type(2){
               width:170px;
@@ -73,7 +74,7 @@
               width:169px;
             }
             &:nth-of-type(5){
-              width:99px;
+              width:110px;
             }
             //&:nth-of-type(6){
             //  width:50px;
