--- a/public/cms/less/pages/product_detail.less
+++ b/public/cms/less/pages/product_detail.less
@@ -5,7 +5,7 @@
   min-width:1146px;
   height:600px;
   background:#F1F1F1;
-  position:absolute;
+  position:absolute!important;
   top:56px;
   left:220px;
   .head{
@@ -131,7 +131,7 @@
           display:inline-block;
           width:10px;
           height:10px;
-          background:url('/images/ali.jpg') no-repeat;
+          background:url('/images/close_icon.png') no-repeat;
           background-size:10px 10px;
           position:absolute;
           top:0;
