--- a/public/frontend/css/pages/contact.css
+++ b/public/frontend/css/pages/contact.css
@@ -346,6 +346,12 @@ table {
   border: 1px solid #25ba80;
   background: #25ba80;
 }
+.el-loading-spinner .path {
+  stroke: #25ba80;
+}
+.el-loading-spinner .el-loading-text {
+  color: #25ba80;
+}
 #contact_main > h1 {
   font-size: 40px;
   text-align: center;
