--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -107,16 +107,11 @@
       }
     }
     .imageText {
-
+      padding:20px;
     }
     .comment {
-      padding:0 0 70px 0;
+      padding:20px 20px 50px 20px;
       position:relative;
-      > h3 {
-        font-size: 36px;
-        color: #333333;
-        text-align: center;
-      }
       .comment_list {
         .oneComment {
           font-size: 16px;
