--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -34,7 +34,6 @@
           box-sizing: border-box;
           height: 49px;
           border: 1px solid #5a5a5a;
-          margin-bottom: 29px;
           .user-icon {
             width:25px;
             height: 25px;
@@ -77,6 +76,13 @@
           input:focus{
             outline:none;
           }
+        }
+        .tip{
+          margin-left:63px;
+          height:29px;
+          color: #ff0000 !important;
+          line-height:29px;
+          font-size: 12px;
         }
       }
       .register-footer {
