--- a/public/cms/css/pages/userMana.css
+++ b/public/cms/css/pages/userMana.css
@@ -457,3 +457,7 @@ table {
 #userMana_main div.user_table > div.tbody p span:nth-of-type(6) {
   width: 16%;
 }
+#userMana_main div.user_table .pagination {
+  text-align: right;
+  padding-right: 20px;
+}
