--- a/public/frontend/css/pages/login.css
+++ b/public/frontend/css/pages/login.css
@@ -365,27 +365,28 @@ table {
 #login_main {
   min-width: 1366px;
   height: 700px;
-  background: url("../../image/Koala.jpg");
+  background: url("/images/login_bg.png") no-repeat;
+  background-size: 100% 100%;
   position: relative;
 }
 #login_main .login_box {
-  position: absolute;
+  box-sizing: border-box;
   width: 570px;
   height: 575px;
+  padding: 0 59px;
   background-color: #ffffff;
+  position: absolute;
   right: 121px;
   top: 74px;
 }
 #login_main .login_box .welcome {
   font-size: 48px;
-  padding-left: 63px;
-  margin-top: 30px;
-  margin-bottom: 35px;
+  text-align: center;
+  margin: 30px 0 35px 0;
 }
 #login_main .login_box ul {
-  list-style: none;
-  margin: 0 60px;
   font-size: 18px;
+  list-style: none;
 }
 #login_main .login_box ul input {
   box-sizing: border-box;
@@ -403,31 +404,6 @@ table {
 #login_main .login_box ul li .checkbox {
   width: 18px;
   height: 18px;
-}
-#login_main .login_box ul li .loginBtn {
-  box-sizing: border-box;
-  width: 100%;
-  height: 50px;
-  border-radius: 3px;
-  background-color: #25ba80;
-  color: #fff;
-  font-size: 20px;
-  border: 0px solid transparent;
-}
-#login_main .login_box ul li .hline {
-  width: 45%;
-  border-bottom: 1px solid #9e9f9f;
-  padding: 0;
-  height: 0;
-  overflow: hidden;
-  display: inline-block;
-  vertical-align: middle;
-}
-#login_main .login_box ul li .or {
-  width: 10%;
-  text-align: center;
-  display: inline-block;
-  vertical-align: middle;
 }
 #login_main .login_box ul .li1,
 #login_main .login_box ul .li2 {
@@ -472,12 +448,45 @@ table {
 #login_main .login_box ul .li3 span:nth-of-type(2) input {
   vertical-align: middle;
 }
-#login_main .login_box ul .li6 {
+#login_main .login_box .btns .loginBtn {
+  cursor: pointer;
+  box-sizing: border-box;
+  width: 100%;
   height: 50px;
   border-radius: 3px;
-  border: solid 1px #25ba80;
-  text-align: center;
+  background-color: #25ba80;
+  color: #fff;
   font-size: 20px;
+  border: 0px solid transparent;
+  margin: 0 0 25px 0;
+}
+#login_main .login_box .btns > p {
+  margin: 0 0 25px 0;
+}
+#login_main .login_box .btns > p .hline {
+  width: 44%;
+  border-bottom: 1px solid #9e9f9f;
+  padding: 0;
+  height: 0;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+}
+#login_main .login_box .btns > p .or {
+  width: 10%;
+  text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+}
+#login_main .login_box .btns .registerBtn {
+  cursor: pointer;
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  border-radius: 3px;
   color: #25ba80;
-  line-height: 50px;
+  font-size: 20px;
+  border: 1px solid #25ba80;
+  margin: 0 0 25px 0;
+  background: #fff;
 }
