--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -503,12 +503,17 @@ table {
   right: 20px;
 }
 .addComment_dialog {
-  width: 340px;
-  height: 210px;
+  width: 450px;
+  height: 240px;
 }
-.addComment_dialog .addComment_dialog_main input {
-  height: 32px;
-  line-height: 32px;
-  font-size: 12px;
-  margin: 0 0 12px 0;
+.addComment_dialog .addComment_dialog_main p img {
+  width: 20px;
+  height: 19px;
+}
+.addComment_dialog .addComment_dialog_main textarea {
+  width: 400px;
+  height: 100px;
+  border-radius: 2px;
+  border: solid 1px #cccccc;
+  margin: 5px 0;
 }
