--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -15,25 +15,26 @@
 #login_main{
   min-width:1366px;
   height: 700px;
-  background:url("../../image/Koala.jpg");
+  background:url("/images/login_bg.png") no-repeat;
+  background-size:100% 100%;
   position: relative;
   .login_box{
-    position: absolute;
+    box-sizing:border-box;
     width: 570px;
     height: 575px;
+    padding:0 59px;
     background-color: #ffffff;
+    position: absolute;
     right:121px;
     top:74px;
     .welcome{
       font-size: 48px;
-      padding-left:63px;
-      margin-top: 30px;
-      margin-bottom: 35px;
+      text-align:center;
+      margin:30px 0 35px 0;
     }
     ul{
-      list-style: none;
-      margin: 0 60px;
       font-size:18px;
+      list-style: none;
       input{
         box-sizing: border-box;
         height: 48px;
@@ -51,31 +52,7 @@
           width: 18px;
           height:18px;
         }
-        .loginBtn{
-          box-sizing: border-box;
-          width:100%;
-          height: 50px;
-          border-radius: 3px;
-          background-color: #25ba80;
-          color:#fff;
-          font-size:20px;
-          border:0px solid transparent;
-        }
-        .hline{
-          width: 45%;
-          border-bottom: 1px solid #9e9f9f;
-          padding: 0;
-          height: 0;
-          overflow: hidden;
-          display: inline-block;
-          vertical-align: middle;
-        }
-        .or{
-          width: 10%;
-          text-align: center;
-          display: inline-block;
-          vertical-align: middle;
-        }
+
       }
       .li1,.li2{
         height: 50px;
@@ -126,14 +103,49 @@
           }
         }
       }
-      .li6{
+    }
+    .btns{
+      .loginBtn{
+        cursor:pointer;
+        box-sizing: border-box;
+        width:100%;
         height: 50px;
         border-radius: 3px;
-        border: solid 1px #25ba80;
-        text-align: center;
+        background-color: #25ba80;
+        color:#fff;
         font-size:20px;
-        color: #25ba80;
-        line-height: 50px;
+        border:0px solid transparent;
+        margin:0 0 25px 0;
+      }
+      >p{
+        margin:0 0 25px 0;
+        .hline{
+          width: 44%;
+          border-bottom: 1px solid #9e9f9f;
+          padding: 0;
+          height: 0;
+          overflow: hidden;
+          display: inline-block;
+          vertical-align: middle;
+        }
+        .or{
+          width: 10%;
+          text-align: center;
+          display: inline-block;
+          vertical-align: middle;
+        }
+      }
+      .registerBtn{
+        cursor:pointer;
+        box-sizing: border-box;
+        width:100%;
+        height: 50px;
+        border-radius: 3px;
+        color:#25ba80;
+        font-size:20px;
+        border:1px solid #25ba80;
+        margin:0 0 25px 0;
+        background:#fff;
       }
     }
   }
