--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -157,14 +157,21 @@
 }
 
 .addComment_dialog{
-  width:340px;
-  height:210px;
+  width:450px;
+  height:240px;
   .addComment_dialog_main{
-    input{
-      height: 32px;
-      line-height:32px;
-      font-size:12px;
-      margin:0 0 12px 0;
+    p{
+      img{
+        width:20px;
+        height:19px;
+      }
+    }
+    textarea{
+      width: 400px;
+      height: 100px;
+      border-radius: 2px;
+      border: solid 1px #cccccc;
+      margin:5px 0;
     }
   }
 }
