--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -5,97 +5,87 @@
 #register_main{
   min-width: 1366px;
   height: 700px;
-  background:url("../../image/Koala.jpg");
+  background:url("/images/login_bg.png") no-repeat;
+  background-size:100% 100%;
   position: relative;
   .register_box{
-    position: absolute;
+    box-sizing:border-box;
     width: 570px;
-    height: 575px;
+    height: 520px;
+    padding:0 59px;
     background-color: #ffffff;
+    position: absolute;
     right:121px;
     top:74px;
-    form{
-      margin-left: 64px;
+    .register-header{
+      height: 40px;
+      line-height: 40px;
+      font-size: 48px;
+      text-align:center;
+      margin:74px 0 51px 0;
+    }
+    ul{
       width: 447px;
-      .register-header{
-        height: 40px;
-        line-height: 40px;
-        margin-top: 74px;
-        margin-bottom: 51px;
-        .title{
-          font-size: 48px;
+      margin:0 auto;
+      list-style: none;
+      li {
+        box-sizing: border-box;
+        height: 49px;
+        border: 1px solid #5a5a5a;
+        margin:0 0 28px 0;
+        .user-icon {
+          width:25px;
+          height: 25px;
+          vertical-align: middle;
+          margin: 12px;
         }
-      }
-      ul{
-        width: 447px;
-        margin:0 auto;
-        list-style: none;
-        li {
+        .password-icon{
+          width:20px;
+          height: 24px;
+          vertical-align: middle;
+          margin: 14px;
+
+        }
+        .again-icon{
+          width:23px;
+          height: 24px;
+          vertical-align: middle;
+          margin: 12px;
+        }
+
+        .vline {
+          vertical-align: middle;
+          display: inline-block;
+          width: 1px;
+          background-color: #5a5a5a;
+          height: 39px;
+          margin: 5px 0 5px 0;
+        }
+        input {
+          vertical-align: top;
           box-sizing: border-box;
-          height: 49px;
-          border: 1px solid #5a5a5a;
-          .user-icon {
-            width:25px;
-            height: 25px;
-            vertical-align: middle;
-            margin: 12px;
-          }
-          .password-icon{
-            width:20px;
-            height: 24px;
-            vertical-align: middle;
-            margin: 14px;
-
-          }
-          .again-icon{
-            width:23px;
-            height: 24px;
-            vertical-align: middle;
-            margin: 12px;
-          }
-
-          .vline {
-            vertical-align: middle;
-            display: inline-block;
-            width: 1px;
-            background-color: #5a5a5a;
-            height: 39px;
-            margin: 5px 0 5px 0;
-          }
-          input {
-            vertical-align: top;
-            box-sizing: border-box;
-            width: 380px;
-            height: 47px;
-            border: 0px solid transparent;
-            border-radius: 3px;
-            font-size: 18px;
-            line-height: 47px;
-            padding-left: 25px;
-          }
-          input:focus{
+          width: 380px;
+          height: 47px;
+          border: 0px solid transparent;
+          border-radius: 3px;
+          font-size: 18px;
+          line-height: 47px;
+          padding-left: 25px;
+          &:focus{
             outline:none;
           }
         }
-        .tip{
-          margin-left:63px;
-          height:29px;
-          color: #ff0000 !important;
-          line-height:29px;
-          font-size: 12px;
-        }
       }
-      .register-footer {
-        .registerBtn{
-          width: 100%;
-          border-radius: 3px;
-          background-color: #25ba80;
-          height: 50px;
-          color:#ffffff;
-          font-size: 20px;
-          border: 1px solid transparent;
-        }
-      }
+    }
+    .registerBtn{
+      cursor:pointer;
+      width: 100%;
+      border-radius: 3px;
+      background-color: #25ba80;
+      height: 50px;
+      color:#ffffff;
+      font-size: 20px;
+      border: 1px solid transparent;
     }
   }
 };
