--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -34,7 +34,7 @@
 #topBar .topBar_right {
   position: absolute;
   top: 15px;
-  right: 80px;
+  right: 50px;
 }
 #topBar .topBar_right .search {
   display: inline-block;
@@ -70,6 +70,13 @@
   background-size: 16px 16px;
   position: relative;
   top: 3px;
+}
+#topBar .topBar_right .user_info {
+  display: inline-block;
+}
+#topBar .topBar_right .user_info img {
+  width: 20px;
+  height: 20px;
 }
 #footer {
   box-sizing: border-box;
