--- a/public/frontend/css/pages/product.css
+++ b/public/frontend/css/pages/product.css
@@ -127,7 +127,7 @@ table {
 #topBar .topBar_right {
   position: absolute;
   top: 15px;
-  right: 80px;
+  right: 50px;
 }
 #topBar .topBar_right .search {
   display: inline-block;
@@ -163,6 +163,13 @@ table {
   background-size: 16px 16px;
   position: relative;
   top: 3px;
+}
+#topBar .topBar_right .user_info {
+  display: inline-block;
+}
+#topBar .topBar_right .user_info img {
+  width: 20px;
+  height: 20px;
 }
 #footer {
   box-sizing: border-box;
