--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -43,7 +43,7 @@
   .topBar_right {
     position: absolute;
     top: 15px;
-    right: 80px;
+    right: 50px;
     .search {
       display: inline-block;
       position: relative;
@@ -78,6 +78,13 @@
       background-size: 16px 16px;
       position: relative;
       top: 3px;
+    }
+    .user_info{
+      display:inline-block;
+      img{
+        width:20px;
+        height:20px;
+      }
     }
   }
 }
