--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -162,8 +162,10 @@
   .addComment_dialog_main{
     p{
       img{
+        cursor:pointer;
         width:20px;
         height:19px;
+        margin:0 5px 0 0;
       }
     }
     textarea{
