--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -34,7 +34,7 @@
 #topBar .topBar_right {
   position: absolute;
   top: 15px;
-  right: 50px;
+  right: 35px;
 }
 #topBar .topBar_right .search {
   display: inline-block;
@@ -73,10 +73,19 @@
 }
 #topBar .topBar_right .user_info {
   display: inline-block;
+  margin: 0 0 0 10px;
 }
-#topBar .topBar_right .user_info img {
+#topBar .topBar_right .user_info > img {
   width: 20px;
   height: 20px;
+  position: relative;
+  top: 4px;
+}
+#topBar .topBar_right .user_info > span {
+  cursor: pointer;
+}
+#topBar .topBar_right .user_info > span:nth-of-type(1) {
+  margin: 0 5px;
 }
 #footer {
   box-sizing: border-box;
