--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -43,7 +43,7 @@
   .topBar_right {
     position: absolute;
     top: 15px;
-    right: 50px;
+    right: 35px;
     .search {
       display: inline-block;
       position: relative;
@@ -81,9 +81,21 @@
     }
     .user_info{
       display:inline-block;
-      img{
+      margin:0 0 0 10px;
+      >img{
         width:20px;
         height:20px;
+        position:relative;
+        top:4px;
+      }
+      >span{
+        cursor:pointer;
+      }
+      >span:nth-of-type(1){
+        margin:0 5px;
+      }
+      >span:nth-of-type(2){
+
       }
     }
   }
